[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/grayBlue_BG.png" type="Texture" id=1]
[ext_resource path="res://scenes/MainGame.gd" type="Script" id=2]
[ext_resource path="res://fonts/cream-DEMO.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://themes/biome_theme.tres" type="Theme" id=4]
[ext_resource path="res://images/sprites/bishop.png" type="Texture" id=5]
[ext_resource path="res://images/sprites/Blacksmith_Idle_1.png" type="Texture" id=6]
[ext_resource path="res://images/sprites/Executioner_Idle_1.png" type="Texture" id=7]
[ext_resource path="res://images/sprites/LargeEliteKnight_Idle_1.png" type="Texture" id=8]
[ext_resource path="res://images/sprite_BG.png" type="Texture" id=9]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="TextureRect" parent="."]
margin_left = 0.877655
margin_top = 0.32132
margin_right = 1920.88
margin_bottom = 1080.32
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamePB" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -368.0
margin_right = 368.0
margin_bottom = 65.0
max_value = 3600.0
value = 3600.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeLabel" type="Label" parent="."]
margin_left = 903.313
margin_top = -6.43875
margin_right = 1046.31
margin_bottom = 77.5612
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTimeTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="BiomeLabels" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 24.0
margin_right = 221.0
margin_bottom = 1059.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnttiLabel" type="Label" parent="BiomeLabels"]
margin_right = 196.0
margin_bottom = 99.0
size_flags_vertical = 3
theme = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Antti"
valign = 1

[node name="EeroLabel" type="Label" parent="BiomeLabels"]
margin_top = 103.0
margin_right = 196.0
margin_bottom = 203.0
size_flags_vertical = 3
text = "Eero"
valign = 1

[node name="JyriLabel" type="Label" parent="BiomeLabels"]
margin_top = 207.0
margin_right = 196.0
margin_bottom = 307.0
size_flags_vertical = 3
text = "Jyri"
valign = 1

[node name="MikaLabel" type="Label" parent="BiomeLabels"]
margin_top = 311.0
margin_right = 196.0
margin_bottom = 411.0
size_flags_vertical = 3
text = "Mika"
valign = 1

[node name="JarnoLabel" type="Label" parent="BiomeLabels"]
margin_top = 415.0
margin_right = 196.0
margin_bottom = 515.0
size_flags_vertical = 3
text = "Jarno"
valign = 1

[node name="SamiLabel" type="Label" parent="BiomeLabels"]
margin_top = 519.0
margin_right = 196.0
margin_bottom = 619.0
size_flags_vertical = 3
text = "Sami"
valign = 1

[node name="TommiLabel" type="Label" parent="BiomeLabels"]
margin_top = 623.0
margin_right = 196.0
margin_bottom = 723.0
size_flags_vertical = 3
text = "Tommi"
valign = 1

[node name="PekkaLabel" type="Label" parent="BiomeLabels"]
margin_top = 727.0
margin_right = 196.0
margin_bottom = 827.0
size_flags_vertical = 3
text = "Pekka"
valign = 1

[node name="JuhaLabel" type="Label" parent="BiomeLabels"]
margin_top = 831.0
margin_right = 196.0
margin_bottom = 931.0
size_flags_vertical = 3
text = "Juha"
valign = 1

[node name="NikoLabel" type="Label" parent="BiomeLabels"]
margin_top = 935.0
margin_right = 196.0
margin_bottom = 1035.0
size_flags_vertical = 3
text = "Niko"
valign = 1

[node name="CardArt" type="TextureRect" parent="."]
margin_left = 603.498
margin_top = 73.0033
margin_right = 1320.5
margin_bottom = 525.004
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer1" type="MarginContainer" parent="."]
margin_left = 486.0
margin_top = 525.0
margin_right = 1409.0
margin_bottom = 1062.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer1"]
margin_right = 923.0
margin_bottom = 537.0

[node name="CardTitle" type="Label" parent="MarginContainer1/VBoxContainer"]
margin_right = 923.0
margin_bottom = 50.0
rect_min_size = Vector2( 923, 50 )
align = 1

[node name="CardText" type="Label" parent="MarginContainer1/VBoxContainer"]
margin_top = 54.0
margin_right = 923.0
margin_bottom = 433.0
size_flags_vertical = 3
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer1/VBoxContainer"]
margin_top = 437.0
margin_right = 923.0
margin_bottom = 537.0
rect_min_size = Vector2( 923, 100 )
custom_constants/separation = 150

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 9 )
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer/TextureRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer"]
margin_left = 268.0
margin_right = 386.0
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 9 )
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer/TextureRect2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer"]
margin_left = 536.0
margin_right = 654.0
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 9 )
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer/TextureRect3"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer"]
margin_left = 804.0
margin_right = 923.0
margin_bottom = 100.0
size_flags_horizontal = 3
texture = ExtResource( 9 )
stretch_mode = 7

[node name="TextureRect" type="TextureRect" parent="MarginContainer1/VBoxContainer/HBoxContainer/TextureRect4"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 1491.0
margin_top = 33.0
margin_right = 1752.0
margin_bottom = 438.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelButton" type="Button" parent="ButtonContainer"]
margin_right = 261.0
margin_bottom = 128.0
size_flags_vertical = 3
text = "Travel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceButton" type="Button" parent="ButtonContainer"]
margin_top = 138.0
margin_right = 261.0
margin_bottom = 266.0
size_flags_vertical = 3
text = "Dice"

[node name="BiomeButton" type="Button" parent="ButtonContainer"]
margin_top = 276.0
margin_right = 261.0
margin_bottom = 405.0
size_flags_vertical = 3
text = "Biome Event"

[connection signal="pressed" from="ButtonContainer/TravelButton" to="." method="_on_TravelButton_pressed"]
[connection signal="pressed" from="ButtonContainer/BiomeButton" to="." method="_on_BiomeButton_pressed"]
